Starting writing the colorterms.py module

--- a/colorterms/data/filtersets/description.yaml
+++ b/colorterms/data/filtersets/description.yaml
@@ -2,6 +2,6 @@ megacam: {g: g.ascii, i: i.ascii, r: r.ascii, u: u.ascii, z: z.ascii}
 megacam2: {g: g.ascii, i2: i2.ascii, r: r.ascii, u: u.ascii, z: z.ascii}
 megacam3: {g: g.dat, i: i.dat, r: r.dat, u: u.dat, z: z.dat}
 sdss: {g: g.dat, i: i.dat, r: r.dat, u: u.dat, z: z.dat}
-decam: {g: g.dat, i: i.dat, r: r.dat, u: u.dat, z: z.dat, Y: Y.dat, VR: VR.dat}
+decam: {g: g.dat, i: i.dat, r: r.dat, u: u.dat, z: z.dat, Y: Y.dat}
 hsc: {g: HSC-g.dat, i: HSC-i.dat, r: HSC-r.dat, Y: HSC-Y.dat, z: HSC-z.dat}
 pan-starrs: {g: g.dat, i: i.dat, r: r.dat, w: w.dat, y: y.dat, z: z.dat}
