--- a/colorterms/default_cuts.yaml
+++ b/colorterms/default_cuts.yaml
@@ -1,9 +1,14 @@
-{'megacam(r) - sdss(r)': {'min': -0.10, 'max': 0},
+{# megacam <-> SDSS
+ 'megacam(r) - sdss(r)': {'min': -0.10, 'max': 0},
  'sdss(u) - sdss(g)': {'max': 6.5},
  'sdss(g) - sdss(r)': {'min': -1,'max': 2.8},
  'sdss(z) - sdss(i)': {'min': -1,'max': 3},
  'megacam(g) - sdss(g)': {'min': -0.9},
  'megacam(i) - sdss(i)': {'min': -0.8},
  'sdss(i) - sdss(r)': {'max': 1},
- 'megacam(z) - sdss(z)': {'min': -1.35, 'max': -1.05}
+ 'megacam(z) - sdss(z)': {'min': -1.35, 'max': -1.05},
+ # pan-starrs <-> hsc
+ 'pan-starrs(g) - hsc(g)': {'min': 0.35, 'max': 0.55},
+ 'pan-starrs(r) - hsc(r)': {'min': -9},
+ 'pan-starrs(z) - hsc(z)': {'min': -1},
  }
