New cuts for megacam, from data

--- a/colorterms/default_cuts.yaml
+++ b/colorterms/default_cuts.yaml
@@ -37,4 +37,48 @@
  'hsc(r) - hsc(i)': {'max': 2},
  'hsc(g) - hsc(r)': {'min': -8},
  'hsc(i) - hsc(z)': {'min': 0},
+
+ # megacam & megacam2 (from CFHT data)
+ 'megacam(g) - megacam(i)': {'min': -0.45, 'max': 3.62},
+ 'megacam(i) - megacam(g)': {'min': -3.62, 'max': 0.45},
+ 'megacam(g) - megacam(r)': {'min': -0.56, 'max': 2.20},
+ 'megacam(r) - megacam(g)': {'min': -2.20, 'max': 0.56},
+ 'megacam(g) - megacam(u)': {'min': -2.92, 'max': 0.72},
+ 'megacam(u) - megacam(g)': {'min': -0.72, 'max': 2.92},
+ 'megacam(g) - megacam(z)': {'min': -0.91, 'max': 4.66},
+ 'megacam(z) - megacam(g)': {'min': -4.66, 'max': 0.91},
+ 'megacam(i) - megacam(r)': {'min': -2.12, 'max': 1.38},
+ 'megacam(r) - megacam(i)': {'min': -1.38, 'max': 2.12},
+ 'megacam(i) - megacam(u)': {'min': -6.12, 'max': 0.96},
+ 'megacam(u) - megacam(i)': {'min': -0.96, 'max': 6.12},
+ 'megacam(i) - megacam(z)': {'min': -1.66, 'max': 1.87},
+ 'megacam(z) - megacam(i)': {'min': -1.87, 'max': 1.66},
+ 'megacam(r) - megacam(u)': {'min': -4.40, 'max': 0.50},
+ 'megacam(u) - megacam(r)': {'min': -0.50, 'max': 4.40},
+ 'megacam(r) - megacam(z)': {'min': -1.38, 'max': 3.17},
+ 'megacam(z) - megacam(r)': {'min': -3.17, 'max': 1.38},
+ 'megacam(u) - megacam(z)': {'min': -0.45, 'max': 7.17},
+ 'megacam(z) - megacam(u)': {'min': -7.17, 'max': 0.45},
+
+ 'megacam2(g) - megacam2(i)': {'min': -0.45, 'max': 3.62},
+ 'megacam2(i) - megacam2(g)': {'min': -3.62, 'max': 0.45},
+ 'megacam2(g) - megacam2(r)': {'min': -0.56, 'max': 2.20},
+ 'megacam2(r) - megacam2(g)': {'min': -2.20, 'max': 0.56},
+ 'megacam2(g) - megacam2(u)': {'min': -2.92, 'max': 0.72},
+ 'megacam2(u) - megacam2(g)': {'min': -0.72, 'max': 2.92},
+ 'megacam2(g) - megacam2(z)': {'min': -0.91, 'max': 4.66},
+ 'megacam2(z) - megacam2(g)': {'min': -4.66, 'max': 0.91},
+ 'megacam2(i) - megacam2(r)': {'min': -2.12, 'max': 1.38},
+ 'megacam2(r) - megacam2(i)': {'min': -1.38, 'max': 2.12},
+ 'megacam2(i) - megacam2(u)': {'min': -6.12, 'max': 0.96},
+ 'megacam2(u) - megacam2(i)': {'min': -0.96, 'max': 6.12},
+ 'megacam2(i) - megacam2(z)': {'min': -1.66, 'max': 1.87},
+ 'megacam2(z) - megacam2(i)': {'min': -1.87, 'max': 1.66},
+ 'megacam2(r) - megacam2(u)': {'min': -4.40, 'max': 0.50},
+ 'megacam2(u) - megacam2(r)': {'min': -0.50, 'max': 4.40},
+ 'megacam2(r) - megacam2(z)': {'min': -1.38, 'max': 3.17},
+ 'megacam2(z) - megacam2(r)': {'min': -3.17, 'max': 1.38},
+ 'megacam2(u) - megacam2(z)': {'min': -0.45, 'max': 7.17},
+ 'megacam2(z) - megacam2(u)': {'min': -7.17, 'max': 0.45},
+
  }
